# MCP2517_ATSAMD_driver

./: CMakeLists.txt  MCP2517.cpp  MCP2517.h  README.md  SPI.cpp  SPI.h  SPI_RP2040.cpp  SPI_RP2040.h  SPI_SAMD.cpp  SPI_SAMD.h  communication_base.h
